# Roboticus-Control-Center

./: CMakeLists.txt  Main.qml  SensorController.cpp  SensorController.h  SensorModel.cpp  SensorModel.h  SerialParser.cpp  SerialParser.h  VectorController.cpp  VectorController.h  VectorModel.cpp  VectorModel.h  main.cpp
Example/Example/: Example.ino
docs/: IMPLEMENTATION_LOG.md  PROJECT_CONTEXT.md
include/controllers/: AppController.h
include/io/: SerialParser.h  UDPConnection.h
include/parser/: SerialFrameExtractor.h
libs/qmsgpack/src/: msgpackcommon.h
qml/: MonitoringPanel.qml  SensorInfo.qml  SensorPanel.qml  SinglePointSeries.qml  Timeline.qml  TitleBar.qml  VectorArrow.qml  VectorInfo.qml
qml/components/: AddItem.qml  AddSensor.qml  SensorInfo.qml  SensorPanel.qml  SinglePointSeries.qml  VectorArrow.qml
src/controllers/: AppController.cpp
src/io/: SerialParser.cpp  UDPConnection.cpp
src/parser/: SerialFrameExtractor.cpp
ui/: Main.qml
ui/components/: ConnectionBar.qml  StyledComboBox.qml
